Adjusted the dropdown box to be fixed and removed margin on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -161,7 +161,7 @@ textarea{
     overflow-y: scroll;
     margin-top: 10px;
     width: 100%;
-    max-height: 10rem;
+    max-height: 12rem;
     max-width: 100vw;
     overflow-y: scroll;
     text-align: center;
@@ -190,6 +190,10 @@ textarea{
     padding-top: 1.2rem;
   }
 
+  .dropbtn{
+    margin-bottom: 0px !important;
+  }
+
 }
 
 /* Sytling for phone screens */
@@ -204,11 +208,11 @@ textarea{
 
   .show-page{
     max-width: fit-content;
+    padding-top: 40px;
   }
 
   .carlist{
     overflow-y: scroll;
-    margin-top: 10px;
     width: 100%;
     max-height: 150px;
     max-width: 100vw;
@@ -218,12 +222,18 @@ textarea{
     margin: 180px 0px;
     left: 4rem;
   }
-  table, th, td {
+
+  table, th, td{
     margin-right: 15px;
+  }
+
+  .dropbtn{
+    margin-bottom: 0px !important;
   }
 
 }
 
+/* Scroll Bar */
 ::-webkit-scrollbar {
   width: 12px;               /* width of the entire scrollbar */
 }
@@ -259,7 +269,7 @@ textarea{
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
-  position: absolute;
+  position: fixed;
   background-color: #15dcff;
   width: 140px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
